# supre_robot_control

./: CMakeLists.txt  README.md  build.sh  package.xml  start.sh  start_common_follower_trajectory.sh  start_common_gripper_leader_follower.sh  start_common_leader_follower.sh  start_leader_follower.sh  supre_robot_control.xml  test_arm.py  test_dual_arm.py
bringup/config/: follower_robot_controllers.yaml  follower_robot_controllers_traj.yaml  gripper_follower_robot_controllers.yaml  gripper_leader_robot_controllers.yaml  leader_robot_controllers.yaml  supre_robot_controllers.yaml
bringup/launch/: common_robot_control.launch.py  follower_trajectory.launch.py  gripper_follower_robot_control.launch.py  gripper_leader_follower.launch.py  leader_follower.launch.py  leader_follower_robot_control.launch.py  supre_robot_control.launch.py  trajectory_robot_control.launch.py
description/ros2_control/: follower_joints.ros2_control.xacro  gripper.ros2_control.xacro  gripper_follower_joints.ros2_control.xacro  gripper_leader_joints.ros2_control.xacro  gripper_left.ros2_control.xacro  gripper_right.ros2_control.xacro  joints.ros2_control.xacro  leader_joints.ros2_control.xacro
description/urdf/: follower_supre_robot.urdf.xacro  follower_trajectory_supre_robot.urdf.xacro  gripper_follower_supre_robot.urdf.xacro  gripper_leader_supre_robot.urdf.xacro  leader_follower_supre_robot.urdf.xacro  leader_supre_robot.urdf.xacro  leader_supre_robot_description.urdf.xacro  supre_robot.urdf.xacro  supre_robot_description.urdf.xacro
docker/: run_docker.sh
hardware/: eyou_system_interface.cpp  jodell_gripper_hardware.cpp  misumi_gripper_hardware.cpp
hardware/include/supre_robot_control/: eyou_system_interface.hpp  jodell_gripper_hardware.hpp  jodell_misumi_gripper_hardware.hpp  misumi_gripper_hardware.hpp
